Update all non major Gradle dependencies to v0.12.2 (#126)